[gd_scene load_steps=11 format=3 uid="uid://0e5thna01ttx"]

[ext_resource type="Texture2D" uid="uid://cghq7g5eeehst" path="res://Art/Sprites/Bullet.png" id="1_3bis3"]
[ext_resource type="Script" path="res://Script/Bullet_shatter.gd" id="2_l05fu"]
[ext_resource type="AudioStream" uid="uid://4aa5spe7jmnu" path="res://Audio/Metal pipe falling sound effect but its more violent.mp3" id="3_87ban"]

[sub_resource type="Curve" id="Curve_c5mb3"]
_data = [Vector2(0.0333333, 1), 0.0, 0.0, 0, 0, Vector2(0.4, 0.725275), 0.0, 0.0, 0, 0, Vector2(0.726667, 0.472527), 0.0, 0.0, 0, 0, Vector2(0.886667, 0.0659341), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 5

[sub_resource type="CurveTexture" id="CurveTexture_tryu3"]
curve = SubResource("Curve_c5mb3")

[sub_resource type="Gradient" id="Gradient_ni2c6"]
offsets = PackedFloat32Array(0, 0.47541, 0.770492, 1)
colors = PackedColorArray(1, 0.968333, 0.62, 1, 0.97, 0.792167, 0, 1, 0.97, 0.5044, 0.097, 1, 0.6, 0.24, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_b28mc"]
gradient = SubResource("Gradient_ni2c6")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_48dup"]
resource_local_to_scene = true
particle_flag_disable_z = true
angle_min = -275.1
angle_max = 32.4
radial_velocity_min = 20.0
radial_velocity_max = 100.0
gravity = Vector3(0, 9, 0)
scale_max = 3.0
color_ramp = SubResource("GradientTexture1D_b28mc")
alpha_curve = SubResource("CurveTexture_tryu3")

[sub_resource type="AtlasTexture" id="AtlasTexture_cg3o7"]
atlas = ExtResource("1_3bis3")
region = Rect2(16, 0, 16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_egmkk"]

[node name="BulletSHatter" type="GPUParticles2D"]
emitting = false
amount = 10
process_material = SubResource("ParticleProcessMaterial_48dup")
texture = SubResource("AtlasTexture_cg3o7")
one_shot = true
explosiveness = 1.0
randomness = 0.82
script = ExtResource("2_l05fu")

[node name="Bomb" type="Area2D" parent="."]

[node name="BombShape" type="CollisionShape2D" parent="Bomb"]
scale = Vector2(60, 60)
shape = SubResource("CircleShape2D_egmkk")

[node name="BombSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_87ban")

[connection signal="finished" from="." to="." method="_on_finished"]
[connection signal="area_entered" from="Bomb" to="." method="_on_bomb_area_entered"]
